# anicli-es2

./: Cargo.toml  README.md  src
src/: main.rs  mainfunctions.rs
src/mainfunctions/: auxfunctions.rs
