[package]
name = "anicli-es2"
version = "0.3.31"
edition = "2025"
readme = "./README.md"
repository = "https://github.com/Luca-237/anicli-es2"
homepage = "https://github.com/Luca-237/anicli-es2"
license-file = "./LICENSE"
description = "Herramienta para ver animé, subtitulado al español, en la línea de comandos."

[dependencies]
base64 = "0.13.0"
dialoguer = "0.10.2"
getopts = "0.2"
regex = "1.5"
ureq = "2.4.0"
